--- a/html/result.html
+++ b/html/result.html
@@ -9,32 +9,41 @@
 	<h1 id="title">第<span class="group" id="groupNumber">1</span>组选手得票情况</h1>
 	<ul class="wrap showList" id="showList">
 		<li class="voteSumWrap">
-			<p class="voteNum">0</p>
-			<div class="voteSum"></div>
-			<p class="singer"></p>
+			<p class="allScore relative-font">0</p>
+			<div class="judgeScore data"><p class="judegeNum position-font"></p></div>
+			<div class="voteSum data"><p class="voteNum position-font"></p></div>
+			<span class="singerNumber"></span>
+			<p class="singer relative-font"></p>
 		</li>
 		<li class="voteSumWrap">
-			<p class="voteNum">0</p>
-			<div class="voteSum"></div>
-			<p class="singer"></p>
+			<p class="allScore relative-font">0</p>
+			<div class="judgeScore data"><p class="judegeNum position-font"></p></div>
+			<div class="voteSum data"><p class="voteNum position-font"></p></div>
+			<span class="singerNumber"></span>
+			<p class="singer relative-font"></p>
 		</li>
 		<li class="voteSumWrap">
-			<p class="voteNum">0</p>
-			<div class="voteSum"></div>
-			<p class="singer"></p>
+			<p class="allScore relative-font">0</p>
+			<div class="judgeScore data"><p class="judegeNum position-font"></p></div>
+			<div class="voteSum data"><p class="voteNum position-font"></p></div>
+			<span class="singerNumber"></span>
+			<p class="singer relative-font"></p>
 		</li>
 		<li class="voteSumWrap">
-			<p class="voteNum">0</p>
-			<div class="voteSum"></div>
-			<p class="singer"></p>
+			<p class="allScore relative-font">0</p>
+			<div class="judgeScore data"><p class="judegeNum position-font"></p></div>
+			<div class="voteSum data"><p class="voteNum position-font"></p></div>
+			<span class="singerNumber"></span>
+			<p class="singer relative-font"></p>
 		</li>
 		<li class="voteSumWrap">
-			<p class="voteNum">0</p>
-			<div class="voteSum"></div>
-			<p class="singer"></p>
+			<p class="allScore relative-font">0</p>
+			<div class="judgeScore data"><p class="judegeNum position-font"></p></div>
+			<div class="voteSum data"><p class="voteNum position-font"></p></div>
+			<span class="singerNumber"></span>
+			<p class="singer relative-font"></p>
 		</li>
 	</ul>
-	<ul id="nameList" class="nameList">
 	</ul>
 	<script type="text/javascript" src="/static/js/funciotn.js"></script>
 	<script type="text/javascript" src="/static/js/result.js"></script>
