lastVote one person resultShow change

--- a/html/result.html
+++ b/html/result.html
@@ -6,40 +6,43 @@
 	<link rel="stylesheet" type="text/css" href="/static/css/result.css">
 </head>
 <body>
-	<h1 id="title">第<span class="group" id="groupNumber">1</span>组选手得票情况</h1>
+	<div class="title">
+		<h1>2016年华中科技大学教职工歌手大赛</h1>
+		<h1 id="title">第<span class="group" id="groupNumber">1</span>组选手得票</h1>
+	</div>
 	<ul class="wrap showList" id="showList">
 		<li class="voteSumWrap">
 			<p class="allScore relative-font">0</p>
-			<div class="judgeScore data"><p class="judegeNum position-font"></p></div>
 			<div class="voteSum data"><p class="voteNum position-font"></p></div>
+			<div class="judgeScore data"><p class="judegeNum position-font"></p></div>
 			<span class="singerNumber"></span>
 			<p class="singer relative-font"></p>
 		</li>
 		<li class="voteSumWrap">
 			<p class="allScore relative-font">0</p>
-			<div class="judgeScore data"><p class="judegeNum position-font"></p></div>
 			<div class="voteSum data"><p class="voteNum position-font"></p></div>
+			<div class="judgeScore data"><p class="judegeNum position-font"></p></div>
 			<span class="singerNumber"></span>
 			<p class="singer relative-font"></p>
 		</li>
 		<li class="voteSumWrap">
 			<p class="allScore relative-font">0</p>
-			<div class="judgeScore data"><p class="judegeNum position-font"></p></div>
 			<div class="voteSum data"><p class="voteNum position-font"></p></div>
+			<div class="judgeScore data"><p class="judegeNum position-font"></p></div>
 			<span class="singerNumber"></span>
 			<p class="singer relative-font"></p>
 		</li>
 		<li class="voteSumWrap">
 			<p class="allScore relative-font">0</p>
-			<div class="judgeScore data"><p class="judegeNum position-font"></p></div>
 			<div class="voteSum data"><p class="voteNum position-font"></p></div>
+			<div class="judgeScore data"><p class="judegeNum position-font"></p></div>
 			<span class="singerNumber"></span>
 			<p class="singer relative-font"></p>
 		</li>
 		<li class="voteSumWrap">
 			<p class="allScore relative-font">0</p>
-			<div class="judgeScore data"><p class="judegeNum position-font"></p></div>
 			<div class="voteSum data"><p class="voteNum position-font"></p></div>
+			<div class="judgeScore data"><p class="judegeNum position-font"></p></div>
 			<span class="singerNumber"></span>
 			<p class="singer relative-font"></p>
 		</li>
