result update image add js update

--- a/html/vote.html
+++ b/html/vote.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="/static/css/style.css">
 </head>
 <body class="vote-bg">
-	<h1 class="title">华中科技大学教职工歌手大赛·<span id="voteTime">第一轮</span></br>评委投票（<span id="intr">需投3人</span>）</h1>
+	<h1 class="title">2016年华中科技大学教职工歌手大赛·<span id="voteTime">第一轮</span></br>评委投票（<span id="intr">需投3人</span>）</h1>
 	<form name="members" method="POST" id="vote-1">
 		<input type="hidden" name="openId" value="">
 		<div id="checkboxWrap">
