--- a/html/voteSuccess.html
+++ b/html/voteSuccess.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="/static/css/style.css">
 </head>
 <body>
-	<img src="/static/img/portrait.jpg" alt="" class="miniImg">
+	<img src="/static/images/theme.png" alt="" class="miniImg">
 	<button class="miniLink" disabled="disabled" id="nextVote">等待投票开始</button>
 	<script type="text/javascript" src="/static/js/funciotn.js"></script>
 	<script type="text/javascript" src="/static/js/voteSuccess.js"></script>
