--- a/html/JudgeBind.html
+++ b/html/JudgeBind.html
@@ -7,14 +7,14 @@
 	<link rel="stylesheet" type="text/css" href="/static/css/style.css">
 </head>
 <body>
-	<h1 class="title">第X届教职工歌唱比赛</h1>
+	<h1 class="title">2016年华中科技大学教职工歌手大赛</h1>
 	<form name="checkid" action="" id="checkid">
 		<input type="text" name="check-code" placeholder="请输入手中的验证码" id="check-code">
 		<p class="error" id="check-error">验证码错误</p>
 		<input type="hidden" name="openId" value="">
 		<button class="submitButton" id="checkIdSubmit" disabled="disabled">确认</button>
 	</form>
-	<img src="/static/img/portrait.jpg" alt="" id="intr-img">
+	<img src="/static/images/theme.png" alt="" id="intr-img">
 	<script type="text/javascript" src="/static/js/funciotn.js"></script>
 	<script type="text/javascript" src="/static/js/checkid.js"></script>
 </body>
